[project]
name = "mcp-db"
version = "0.1.0"
description = "Storage wrapper for MCP servers: session persistence, event sourcing, and distributed coordination"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Bharat Geleda", email = "bharatgeleda@gmail.com" }]
license = { text = "Apache-2.0" }
keywords = ["mcp", "storage", "sessions", "distributed", "event-sourcing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing",
]
dependencies = [
    "anyio>=4.10.0",
    "click>=8.2.1",
    "httpx>=0.28.1",
    "mcp>=1.12.4",
    "pydantic>=2.11.7",
    "redis>=5.0.0",
    "starlette>=0.47.2",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
redis = [
  "redis>=5.0.0; python_version >= '3.10'",
  "aioredis>=2.0.1; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/bh-rat/mcp-db"
Repository = "https://github.com/bh-rat/mcp-db"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_db"]

[tool.hatch.build.targets.sdist]
exclude = [
  "tests/",
  ".pytest_cache/",
  "__pycache__/",
  ".venv/",
  ".git/",
  ".idea/",
  "*.pyc",
  "*.pyo",
  "*~",
  ".DS_Store",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "F401",   # unused-import
    "TID252", # relative-imports (blocks relative imports, enforces absolute imports)
    "I001",   # unsorted-imports
    "E501",   # line-too-long
    "F841",   # unused-variable
    "E402",   # module-import-not-at-top-of-file
    "Q",      # flake8-quotes
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra", "--strict-markers", "--disable-warnings", "-v"]
